--- a/app/src/main/res/layout/activity_section_b1.xml
+++ b/app/src/main/res/layout/activity_section_b1.xml
@@ -115,7 +115,8 @@
                 <RadioGroup
                     android:id="@+id/kb201"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/kb201a"
@@ -161,7 +162,7 @@
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="@android:color/white" />
 
-                    <!--weeks-->
+                    <!--weeks--><!--
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -169,8 +170,10 @@
                         android:background="@color/colorPrimaryAlpha"
                         android:text="@string/weeks"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textColor="@android:color/white" />
-
+                        android:textColor="@android:color/white" />-->
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
                     <EditText
                         android:id="@+id/kb202w"
                         android:layout_width="match_parent"
@@ -180,8 +183,8 @@
                         android:hint="@string/weeks"
                         android:inputType="number"
                         android:maxLength="1" />
-
-                    <!--months-->
+                    </android.support.design.widget.TextInputLayout>
+                  <!--  &lt;!&ndash;months&ndash;&gt;
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -189,8 +192,10 @@
                         android:background="@color/colorPrimaryAlpha"
                         android:text="@string/months"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textColor="@android:color/white" />
-
+                        android:textColor="@android:color/white" />-->
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
                     <EditText
                         android:id="@+id/kb202m"
                         android:layout_width="match_parent"
@@ -200,6 +205,7 @@
                         android:hint="@string/months"
                         android:inputType="number"
                         android:maxLength="1" />
+                    </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
 
@@ -211,7 +217,7 @@
                     android:visibility="gone"
                     tools:visibility="visible">
 
-                    <!--kb204-->
+                    <!--kb203-->
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -234,7 +240,7 @@
                         app:minDate="01/01/1917" />
 
 
-                    <!--kb203-->
+                    <!--kb204-->
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -243,20 +249,21 @@
                         android:text="@string/kb203"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="@android:color/white" />
-
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@color/colorPrimary"
+                        android:text="@string/kb203a"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="@android:color/white" />
                     <RadioGroup
                         android:id="@+id/kb203"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="16dp"
-                            android:background="@color/colorPrimary"
-                            android:text="@string/kb203a"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:textColor="@android:color/white" />
+
 
                         <RadioButton
                             android:id="@+id/kb203a"
