--- a/app/src/main/res/layout/activity_section_info_kmc.xml
+++ b/app/src/main/res/layout/activity_section_info_kmc.xml
@@ -46,6 +46,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:text="@string/crataluka" />
+
+            <Spinner
+                android:id="@+id/crataluka"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorHeading"
+                android:popupBackground="#d6d6d6"
+                android:prompt="@string/crataluka" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="@string/cruc" />
 
             <Spinner
@@ -58,72 +74,21 @@
                 android:popupBackground="#d6d6d6"
                 android:prompt="@string/cruc" />
 
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="@string/crvillage" />
 
-            <LinearLayout
+            <Spinner
+                android:id="@+id/crvillage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:orientation="horizontal">
-
-                <ToggleButton
-                    android:id="@+id/btnChangeVillage"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0.3"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:gravity="center"
-                    android:padding="5dp"
-                    android:textOff=""
-                    android:textOn="" />
-
-                <EditText
-                    android:id="@+id/cravillage"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:background="@color/colorHeading"
-                    android:hint="@string/crvillage" />
-
-            </LinearLayout>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/cra02" />
-
-            <EditText
-                android:id="@+id/cra02"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:digits="0123456789"
-                android:hint="@string/cra02"
-                android:inputType="number"
-                android:maxLength="5" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/cra03" />
-
-            <EditText
-                android:id="@+id/cra03"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:digits="0123456789"
-                android:hint="@string/cra03"
-                android:inputType="number"
-                android:maxLength="5" />
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/colorHeading"
+                android:popupBackground="#d6d6d6"
+                android:prompt="@string/crvillage" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -131,44 +96,140 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/cra04" />
 
-            <EditText
-                android:id="@+id/cra04"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:digits="0123456789"
-                android:hint="@string/cra04"
-                android:inputType="number"
-                android:maxLength="3" />
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/cra05" />
+                <EditText
+                    android:id="@+id/cra04"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789-"
+                    android:hint="@string/cra04"
+                    android:inputType="textCapCharacters"
+                    android:maxLength="5" />
 
-            <EditText
-                android:id="@+id/cra05"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
-                android:hint="@string/cra05"
-                android:inputType="textCapWords"
-                android:maxLength="50" />
+                <Button
+                    android:id="@+id/btnSearch"
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:layout_weight="1"
+                    android:onClick="@{() -> callback.BtnSearchWoman()}"
+                    android:text="@string/searchwoman"
+                    android:textColor="@android:color/holo_green_light" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/cra06" />
+            </LinearLayout>
 
-            <EditText
-                android:id="@+id/cra06"
+
+            <LinearLayout
+                android:id="@+id/fldGrpcra04"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:digits="0123456789"
-                android:hint="@string/cra06"
-                android:inputType="number"
-                android:maxLength="2" />
+                android:orientation="vertical"
+                android:visibility="gone">
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/crwoman" />
+
+                <Spinner
+                    android:id="@+id/crwoman"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/colorHeading"
+                    android:popupBackground="#d6d6d6"
+                    android:prompt="@string/crwoman" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/crvillage" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:orientation="horizontal">
+
+                    <ToggleButton
+                        android:id="@+id/btnChangeVillage"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="0.3"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:gravity="center"
+                        android:padding="5dp"
+                        android:textOff=""
+                        android:textOn="" />
+
+                    <EditText
+                        android:id="@+id/cravillage"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:background="@color/colorHeading"
+                        android:hint="@string/crvillage" />
+
+                </LinearLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/cra03" />
+
+                <EditText
+                    android:id="@+id/cra03"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:digits="0123456789"
+                    android:hint="@string/cra03"
+                    android:inputType="number"
+                    android:maxLength="5" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/cra05" />
+
+                <EditText
+                    android:id="@+id/cra05"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
+                    android:hint="@string/cra05"
+                    android:inputType="textCapWords"
+                    android:maxLength="50" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/cra06" />
+
+                <EditText
+                    android:id="@+id/cra06"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:digits="0123456789"
+                    android:hint="@string/cra06"
+                    android:inputType="number"
+                    android:maxLength="2" />
+
+            </LinearLayout>
 
 
             <LinearLayout
@@ -196,7 +257,7 @@
                         android:onClick="@{() -> callback.BtnContinue()}"
                         android:text="@string/nextSection"
                         android:textColor="@android:color/holo_green_light"
-                        android:textSize="24sp" />
+                        android:textSize="20sp" />
 
                     <Button
                         android:id="@+id/btnEnd"
