--- a/app/src/main/res/layout/activity_section_a1.xml
+++ b/app/src/main/res/layout/activity_section_a1.xml
@@ -344,7 +344,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:layout_weight="1"
-                    android:text="@string/other" />
+                    android:hint="@string/other" />
 
             </RadioGroup>
 
